
  * In some cases, transmission errors when reading storage objects
    from a backend may have been misreported as corrupted backend
    objects. This has been fixed.

  * S3QL no longer crashes when data corruption occurs in the first
    few bytes of an LZMA compressed storage object.

  * S3QL now honors the "Retry-After" HTTP header when receiving an
    XML error from a storage server.

2014-03-29, S3QL 2.8.1

  * No changes in S3QL itself.

  * The S3QL 2.8 tarball accidentally included a copy of the Python
    dugong module. This has been fixed in the 2.8.1 release.

2014-03-13, S3QL 2.8

  * Fixed various problems with using a proxy server.

  * Sending SIGUSR1 to mount.s3ql now generates a stacktrace
    (debugging feature).

  * When passing --installed to the test runner, S3QL commands
    are now loaded from $PATH instead of the packages bin/
    directory.

  * The runtest.py script now comes with the correct shebang
    (i.e., it can now be called as "./runtests.py" instead of
    "python3 runtests.py").

  * S3QL now requires the python dugong module
    (https://bitbucket.org/nikratio/python-dugong)

  * Fixed a file system hang when all upload threads encounter
    unexpected backend problems.

2013-12-16, S3QL 2.7

  * Fixed another race condition that could lead to mount.s3ql
    crashing with `ValueError: I/O operation on closed file`.

  * S3QL no longer generates warning messages for the first two times
    that it has to resend a request to the storage backend. If there
    is no success after the second try, messages are emitted as before.

  * S3QL now stores multiple copies of the master encryption key to
    allow recovery if the backend looses the object holding the
    primary copy. To take advantage of this functionality for existing
    file systems, change the file system passphrase with s3qladm.

  * Fixed problem with automatic cache size detection (mount.s3ql was